refactor: 重构代码格式并添加全局快捷键功能
- 使用 Prettier 统一代码格式
- 删除 .eslintrc.json 改用 eslint.config.js
- 添加全局快捷键功能(F12打开开发者工具)
- 修复多处文件末尾缺少换行符问题
- 优化 JSON 和 JSX 格式
- 更新相关依赖项

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,28 +3,25 @@
   "typescript.tsc.autoDetect": "off",
   "json.schemas": [
     {
-      "fileMatch": [
-        "/*electron-builder.json5",
-        "/*electron-builder.json"
-      ],
+      "fileMatch": ["/*electron-builder.json5", "/*electron-builder.json"],
       "url": "https://json.schemastore.org/electron-builder"
     }
   ],
   "editor.formatOnSave": true,
   "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.json-language-features"
   },
   "[vue]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.css-language-features"
   },
   "[less]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
