--- a/package.json
+++ b/package.json
@@ -24,10 +24,25 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "electron-updater": "^6.3.9"
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@remixicon/react": "^4.7.0",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-updater": "^6.3.9",
+    "lucide-react": "^0.554.0",
+    "qs": "^6.14.0",
+    "react-router-dom": "^7.9.6",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
+    "@types/qs": "^6.14.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
@@ -46,7 +61,9 @@
     "prettier": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.15",
+    "sass": "^1.94.2",
+    "sass-embedded": "^1.93.3",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.4.2",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.4.11",
